--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,9 +34,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.my_app"
+        applicationId "com.banginWallpaper_app"
         minSdkVersion 16
-        targetSdkVersion 30
+        targetSdkVersion 27
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
