--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/Spinner-1s-200px.gif
+    - assets/3.gif
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
